--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ body{height: 100vh;width: 100%;}
     height: 16px;
     width: 16px;
     transform: translateX(2px) translateY(2px);
-    background-color: #fb0909;
-    border-radius: 50%;
+    background-color: #ff0909;
     top: 100px;
     left: 100px;
     z-index: 1;
