--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{height: 100vh;width: 100%;}
     height: 16px;
     width: 16px;
     transform: translateX(2px) translateY(2px);
-    background-color: #ff0909;
+    background-color: #ffff00;
     top: 100px;
     left: 100px;
     z-index: 1;
